# stackpack

./: .gitignore  Cargo.toml  Cargo.toml.comp  LICENSE  README.md  big.tar.bsc  stackpack.tar.xz
sample_plugin/: Cargo.toml
sample_plugin/src/: lib.rs
src/: algorithms.rs  cli.rs  compressor.rs  main.rs  mutator.rs  plugins.rs  registered.rs  tests.rs  units.rs
src/algorithms/: TODO_IMAGE_FORMAT.md  arcode.rs  arith.rs  bsc.rs  bwt.rs  huffman.rs  imgdecode.rs  mtf.rs  pipeline.rs  re_pair.rs  recursive_rle.rs  rle.rs  rle2.rs  rle3.rs  serializing_algorithm.rs
src/cli/: corpus.rs  decode.rs  encode.rs  pipeline.rs  test.rs
test_data/: long.txt  node_modules.tar  short.txt
