[package]
description = "A compressor-agnostic compression pipeline."
edition = "2024"
license = "MIT"
name = "stackpack"
repository = "https://github.com/Paladynee/stackpack"
version = "2025.11.9"

[dependencies]
anyhow = "1.0.97"
thiserror = "1.0"
clap = { version = "4.4", features = ["derive"] }
log = "0.4.28"
cfg-if = "1.0.4"

arcode = "0.2.4"
lzw = "0.10.0"
libsais = { version = "0.2.0", features = ["openmp"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", optional = true, features = [
    "env-filter",
] }
tracing-log = { version = "0.2.0", optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

derive_fromstr = "0.1"
voxell_rng = "0.5.0"
voxell_timer = "1.2.2"

walkdir = "2.5.0"
no-panic = "0.1.35"

[features]
default = ["tracing"]
tracing = ["dep:tracing", "dep:tracing-subscriber", "dep:tracing-log"]

[profile.release]
debug = true
