[package]
description = "A compressor-agnostic compression pipeline."
edition = "2024"
license = "EUPLv1.2"
name = "stackpack"
repository = "https://github.com/Paladynee/stackpack"
version = "1.1.1"

[dependencies]
anyhow = "1.0.97"
# thiserror = "1.0"
clap = { version = "4.4", features = ["derive"] }
# log = "0.4.28"
cfg-if = "1.0.4"
libloading = "0.9.0"
parking_lot = "0.12.5"
image = { version = "0.25.8", optional = true, default-features = false, features = [
    "default-formats",
] }

arcode = "0.2.4"
# lzw = "0.10.0"
libsais = { version = "0.2.0", features = ["openmp"] }

# serde = { version = "1.0", features = ["derive"] }
# serde_json = "1.0"
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", optional = true, features = [
    "std",
    "fmt",
    "ansi",
], default-features = false }
tracing-log = { version = "0.2.0", optional = true }
# tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

# derive_fromstr = "0.1"
# voxell_rng = "0.5.0"
voxell_timer = "1.2.2"
bsc_m03_sys = "0.2.0"

walkdir = "2.5.0"
# no-panic = "0.1.35"

[features]
default = ["tracing"]
tracing = ["dep:tracing", "dep:tracing-subscriber", "dep:tracing-log"]
image = ["dep:image"]

[profile.dev]
opt-level = 1